# scanexcel

./: README.md  pyproject.toml  run.bat
docs/: ARCHITECTURE.md
src/: main.py
tests/: test_api.py
