[project]
name = "local-ai-ocr-to-excel"
version = "0.1.0"
description = "Turn scanned documents, receipts, handwritten notes, and pasted text into reviewed spreadsheet rows."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
[tool.pytest.ini_options]
pythonpath = ["."]
